...
    self.avatarOverride = avatarOverride
  }

  public var body: some View {
    VStack(spacing: 24) {
      VStack(spacing: 6) {
        Text("나의 철학자 유형")
          .pretendardFont(.semiBold13)
          .foregroundStyle(.primary500)

        Text(card.displayTypeName)
          .pretendardFont(.semiBold24)
          .foregroundStyle(.gray500)
...
